fix(PDS-1903): add truncate to card product description

--- a/packages/site-cards/src/components/CardProduct/styles.module.scss
+++ b/packages/site-cards/src/components/CardProduct/styles.module.scss
@@ -46,6 +46,8 @@
 }
 
 .description {
+  @include ste.composite-var(ste.$sans-body-m);
+
   color: ste.$sys-neutral-text-support;
   word-break: break-word;
 }
